As my SO is in bed, I have time for this final puzzle piece

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -150,7 +150,7 @@ $$
 
 \begin{frame}{Squares}
   \pgfputat{\pgfxy(11.5, 3.5)}{\pgfbox[right,base]{
-      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_square.png}
+      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_square.pdf}
   }}
 \end{frame}
 
