Update first experiment in slides with no of records and caption line

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -171,11 +171,12 @@ $$
 
 
 \begin{frame}
+
   \begin{figure}[!t]
     \centering
-    \includegraphics[height=5cm]{assets/MinMinAbsEval.png}
+    \includegraphics[height=4.5cm]{assets/MinMinAbsEval.png}
   \end{figure}
-
+%
   \begin{table}
     \resizebox{9cm}{!}{%
       \begin{tabular}{| l || p{1.3cm} | p{1.7cm} | p{1.7cm} | p{1.5cm} | p{1.5cm} | p{1.5cm} |}
@@ -202,7 +203,7 @@ $$
 
 	\hline
     \end{tabular}}
-    \caption{date: 02.08.2020  , parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$  }
+    \caption{{\footnotesize Date: 02.08.2020, $n_{records}:$ 78, parameters: $M=50$, $S=500$ and $\text{minimum number of cases}=5000$}}
   \end{table}
 \end{frame}
 
