--- a/slides/main.tex
+++ b/slides/main.tex
@@ -2,7 +2,7 @@
 \usetheme{metropolis}           % Use metropolis theme
 \title{On Proportional Symbol Maps - An applied perspective}
 \date{\today}
-\author{David Gödecke, Philip Mayer, Roland Siegbert}
+\author{David Göckede, Philip Mayer, Roland Siegert}
 \institute{Geometry Lab SS 2020}
 
 
