--- a/slides/main.tex
+++ b/slides/main.tex
@@ -201,9 +201,68 @@ $$
 \end{frame}
 
 \begin{frame}{Pies}
-  \pgfputat{\pgfxy(11.5, 3.5)}{\pgfbox[right,base]{
+  \pgfputat{\pgfxy(11.5, 0)}{\pgfbox[right,base]{
       \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
   }}
+  
+  Seen in practise
+  
+  Allow individual rotations
+  
+  We want the separating lines to be clearly visible
+  
+  Local utility given by the distance of the separating boundary points to the covered area
+  
+\end{frame}
+
+\begin{frame}{Pie Utility}
+  \pgfputat{\pgfxy(11.5, 0)}{\pgfbox[right,base]{
+      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
+  }}
+  
+  Local pie utility given by
+  \begin{figure}[h]
+    \centering
+      \includegraphics[width=0.5\linewidth]{slides/assets/piecharts_utility.png}
+      \caption{Covered Piechart with relevant segment marked in red}
+  \end{figure}
+\end{frame}
+
+\begin{frame}{Pie Questions}
+  \pgfputat{\pgfxy(11.5, 1.8)}{\pgfbox[right,base]{
+      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
+  }}
+    Two questions arise naturally in the discussion of pies
+    \begin{enumerate}
+        \item Can we compute the optimal drawing even among physically realizable drawings?
+        \item How can we rotate the pies such that their local utility is optimal?
+    \end{enumerate}
+\end{frame}
+
+\begin{frame}{Pie NP-hardness}
+  \pgfputat{\pgfxy(11.5, 0)}{\pgfbox[right,base]{
+      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
+  }}
+  \textbf{Theorem:} It is NP-hard to decide whether for a given set of pie glyphs there is a physically realizable drawing with global utility greater or equal to some value $k$.
+  
+  \textbf{Corollary:} If we find an algorithm that computes an optimal physically realizable drawing in polynomial time, then $P=NP$.
+  \pause
+  \textbf{Proof:} The proof will be sketched briefly.
+  
+  We reduce this question from $planar$-3SAT. It is known to be NP-complete to decide whether a given 3SAT instance has a satisfying assignment.
+  
+  We construct a set of pies that have a sufficiently good drawing if and only if the 3SAT instance is satisfiable.
+\end{frame}
+
+\begin{frame}{Pie Questions}
+  \pgfputat{\pgfxy(11.5, 1.8)}{\pgfbox[right,base]{
+      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
+  }}
+    Two questions arise naturally in the discussion of pies
+    \begin{enumerate}
+        \item Can we compute the optimal drawing even among physically realizable drawings?
+        \item How can we rotate the pies such that their local utility is optimal?
+    \end{enumerate}
 \end{frame}
 
 \begin{frame}{Squares}
