changed file directory

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -160,7 +160,7 @@ $$
   \end{itemize}
   \begin{figure}[h]
     \centering
-      \includegraphics[width=0.9\linewidth]{slides/assets/nested_utility.png}
+      \includegraphics[width=0.9\linewidth]{assets/nested_utility}
       \caption{Minimum attained at red circle}
   \end{figure}
   \begin{itemize}
@@ -195,7 +195,7 @@ $$
   
   \begin{figure}[h]
     \centering
-      \includegraphics[width=0.9\linewidth]{slides/assets/hawaiian_utility.png}
+      \includegraphics[width=0.9\linewidth]{assets/hawaiian_utility.png}
   \end{figure}
   
 \end{frame}
@@ -223,7 +223,7 @@ $$
   Local pie utility given by
   \begin{figure}[h]
     \centering
-      \includegraphics[width=0.5\linewidth]{slides/assets/piecharts_utility.png}
+      \includegraphics[width=0.5\linewidth]{assets/piecharts_utility.png}
       \caption{Covered Piechart with relevant segment marked in red}
   \end{figure}
 \end{frame}
