Recorrect names and remove TODO marker

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -2,7 +2,7 @@
 \usetheme{metropolis}           % Use metropolis theme
 \title{On Proportional Symbol Maps - An applied perspective}
 \date{\today}
-\author{David Göckede, Philip Mayer, Roland Siegert}
+\author{David Göckede, Philip Mayer, Roland Siegbert}
 \institute{Geometry Lab SS 2020}
 
 
@@ -49,7 +49,7 @@
     \begin{subfigure}[b]{\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{../covid_spread_20200511.png}
-      \caption{2020.05.11 [TODO: Current picture]}
+      \caption{2020.05.11}
     \end{subfigure}\\
   \end{figure}
 
