changed the names of the glyphs

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -96,22 +96,22 @@ $$
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_nested_circles}
-      \caption{Coffee.}
+      \caption{centered nested disks}
     \end{subfigure}
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_nested_elastic_circles}
-      \caption{More coffee.}
+      \caption{arbitrary nested disks}
     \end{subfigure}\\
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_pie}
-      \caption{Tasty coffee.}
+      \caption{pie charts}
     \end{subfigure}
     \begin{subfigure}[b]{0.45\linewidth}
       \centering
       \includegraphics[width=0.5\linewidth]{assets/symbol_square}
-      \caption{Too much coffee.}
+      \caption{squares}
     \end{subfigure}
   \end{figure}
 
