deleted the rotation stuff (i think)

--- a/slides/main.tex
+++ b/slides/main.tex
@@ -180,10 +180,9 @@ $$
   \pgfputat{\pgfxy(11.5, 1.8)}{\pgfbox[right,base]{
       \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
   }}
-    Two questions arise naturally in the discussion of pies
+    One question arises naturally in the discussion of pies
     \begin{enumerate}
         \item Can we compute the optimal drawing even among physically realizable drawings?
-        \item How can we rotate the pies such that their local utility is optimal?
     \end{enumerate}
 \end{frame}
 
@@ -198,12 +197,7 @@ $$
   \textbf{Proof:} Reduction from $planar$-3SAT.
 \end{frame}
 
-\begin{frame}{Pie Rotations}
-  \pgfputat{\pgfxy(11.5, 1)}{\pgfbox[right,base]{
-      \includegraphics[width=1.2cm,height=1.2cm,keepaspectratio]{assets/symbol_pie.pdf}
-  }}
-  Vielleicht ein Bild von Philip.
-\end{frame}
+
 
 \begin{frame}{Squares}
   \pgfputat{\pgfxy(11.5, 3.5)}{\pgfbox[right,base]{
@@ -212,7 +206,7 @@ $$
   
   \begin{figure}[h]
     \centering
-      \includegraphics[width=0.9\linewidth]{slides/assets/square_bloat.png}
+      \includegraphics[width=0.9\linewidth]{assets/square_bloat.png}
       \caption{mosaic square and associated pie glyph}
   \end{figure}
 \end{frame}
